--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "check": "npm run lint && npm run format:check",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "build:dev": "rimraf dist && rollup --config scripts/rollup/react.confg.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.35.0",
+    "@rollup/plugin-commonjs": "^28.0.6",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.35.0",
@@ -31,12 +33,18 @@
     "husky": "^9.1.7",
     "jiti": "^2.5.1",
     "prettier": "^3.6.2",
+    "rimraf": "^6.0.1",
     "rollup": "^4.50.2",
+    "rollup-plugin-generate-package-json": "^3.2.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript-eslint": "^8.44.0"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "react": "link:../../Library/pnpm/global/5/node_modules/react"
   }
 }
