--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.35.0",
     "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-replace": "^6.0.2",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.35.0",
